@@ -1,3 +1,10 @@
+2006-02-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/unix/sysv/linux/futimesat.c (futimesat): If
+	file == NULL, use __futimes unconditionally.
+
+	* manual/filesys.texi (futimes): Fix prototype.
+
 2006-02-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* math/math.h (__nldbl_nexttowardf): Put __THROW before
